inbound-email/main/default/objects/Inbound_Email__c/fields/From_Email__c.field-meta.xml
<CustomField>
    <fullName>From_Email__c</fullName>
    <label>From Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>