inbound-email/main/default/objects/Inbound_Email__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Inbound Emails</relationshipLabel>
    <relationshipName>Inbound_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>