inbound-email/main/default/objects/Inbound_Email__c/fields/Matched_Multiple_Leads__c.field-meta.xml
<CustomField>
    <fullName>Matched_Multiple_Leads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Matched Multiple Leads</label>
    <type>Checkbox</type>
</CustomField>