inbound-email/main/default/objects/Inbound_Email__c/fields/To_Email__c.field-meta.xml
<CustomField>
    <fullName>To_Email__c</fullName>
    <label>To Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>